[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/map_viewer.gd" type="Script" id=2]

[node name="Main" type="Node2D"]

script = ExtResource( 1 )

[node name="MapViewer" type="Node2D" parent="." index="0"]

position = Vector2( 0, 35 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="NextGenBtn" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 117.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next Generation"
flat = false
align = 1

[node name="ResetBtn" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_right = 210.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="NextGenBtn" to="." method="_on_NextGenBtn_pressed"]

[connection signal="pressed" from="ResetBtn" to="." method="_on_ResetBtn_pressed"]


